--- a/flight-deals-start/.env
+++ b/flight-deals-start/.env
@@ -1,5 +1,7 @@
 SHEETY_USRERNAME="______YOUR_USERNAME_____"
 SHEETY_PASSWORD="_______YOUR_PASSWORD_____"
+SHEETY_PRICES_ENDPOINT="your_prices_sheet_endpoint"
+SHEETY_USERS_ENDPOINT="your_users_sheet_endpoint"
 AMADEUS_API_KEY="______YOUR_API_KEY_____"
 AMADEUS_SECRET="______YOUR_AMADEUS_SECRET_____"
 TWILIO_SID="______YOUR_TWILIO_SID_____"
@@ -7,3 +9,6 @@ TWILIO_AUTH_TOKEN="______YOUR_TWILIO_VIRTUAL_NUMBER_____"
 TWILIO_VIRTUAL_NUMBER="______YOUR_TWILIO_VIRTUAL_NUMBER_____"
 TWILIO_VERIFIED_NUMBER="______+YOUR_TWILIO_VERIFIED_NUMBER_____"
 TWILIO_WHATSAPP_NUMBER="______+YOUR_TWILIO_WHATSAPP_NUMBER_____"
+EMAIL_PROVIDER_SMTP_ADDRESS="this is smtp.gmail.com for gmail but different for yahoo. check day 32"
+MY_EMAIL="your_email"
+MY_EMAIL_PASSWORD="your_app_password_from_your_email_provider"
